tests/fixtures/workflows/nested/invalid/recursive-direct.invalid
export const meta = {
  name: "recursive-direct",
  description: "Direct recursion"
};

return await workflow({ name: "recursive-direct" });
